objects/AFS_Leads__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Law_Coordinator__c</fullName>
        <label>Assigned Client Success Coordinator</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <label>Main Lead Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AFS_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>ARS Leads</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Primary_Client__c</columns>
        <columns>Referred_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Name__c</field>
            <operation>notContain</operation>
            <value>Apples</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_AFS_Leads</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ARS Leads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFS Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>